// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options selectedCardKeys when given should set the select state of the item 1`] = `
[
  {
    "columns": [
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "number",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 0,
        "name": "id",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 1,
        "name": "value",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "fields": [
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "dataField": "id",
          "dataType": "number",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "dataField": "value",
          "dataType": "string",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "index": 0,
    "isSelected": true,
    "key": 1,
    "values": [
      1,
      "test",
    ],
    "visible": true,
  },
]
`;

exports[`Options selection allowSelectAll when it is false and selection mode is 'multiple' selection should not work 1`] = `[]`;

exports[`Options selection allowSelectAll when it is true and selection mode is 'multiple' selection should not work 1`] = `
[
  {
    "locateInMenu": "auto",
    "location": "before",
    "name": "selectAllButton",
    "options": {
      "disabled": false,
      "icon": "selectall",
      "onClick": [Function],
      "text": "Select all",
    },
    "widget": "dxButton",
  },
  {
    "locateInMenu": "auto",
    "location": "before",
    "name": "clearSelectionButton",
    "options": {
      "disabled": true,
      "icon": "close",
      "onClick": [Function],
      "text": "Clear selection",
    },
    "widget": "dxButton",
  },
]
`;

exports[`Options selection allowSelectAll when it is true and selection mode isn't 'multiple' selection should not work 1`] = `[]`;

exports[`Options selection mode when it is 'none' and the selectedCardKeys is specified selection should not apply 1`] = `
[
  {
    "columns": [
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "number",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 0,
        "name": "id",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 1,
        "name": "value",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "fields": [
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "dataField": "id",
          "dataType": "number",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "dataField": "value",
          "dataType": "string",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "index": 0,
    "isSelected": false,
    "key": 1,
    "values": [
      1,
      "test",
    ],
    "visible": true,
  },
]
`;

exports[`Options selection mode when it is 'none' selection should not work 1`] = `
[
  {
    "columns": [
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "number",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 0,
        "name": "id",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 1,
        "name": "value",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    "data": {
      "id": 1,
      "value": "test",
    },
    "fields": [
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "dataField": "id",
          "dataType": "number",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Value",
          "dataField": "value",
          "dataType": "string",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "value",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "test",
        "highlightedText": null,
        "index": 1,
        "text": "test",
        "value": "test",
      },
    ],
    "index": 0,
    "isSelected": false,
    "key": 1,
    "values": [
      1,
      "test",
    ],
    "visible": true,
  },
]
`;
